syntax = "proto3";

option java_package = "m1.archi.services";
package m1.archi;

import "models/reservation.proto";

message ReserverChambresRequest {
  int64 idOffre = 1;
  bool petitDejeuner = 2;
  string nomClient = 3;
  string prenomClient = 4;
  string email = 5;
  string telephone = 6;
  string nomCarte = 7;
  string numeroCarte = 8;
  string expirationCarte = 9;
  string CCVCarte = 10;
}

message ReserverChambresResponse {
  Reservation reservation = 1;
}

service ReserverChambreService {
  rpc ReserverChambres(ReserverChambresRequest) returns (ReserverChambresResponse);
}
